--- a/public/styles.css
+++ b/public/styles.css
@@ -1,69 +1,211 @@
 /* styles.css */
 
+/* $$index */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f8f8;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: "Arial", sans-serif;
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 form {
-    background-color: #fff;
-    padding: 20px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+  background-color: #fff;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
 }
 
 h2 {
-    text-align: center;
-    color: #333;
+  /* text-align: center; */
+  color: #333;
 }
 
 label {
-    display: block;
-    margin-bottom: 8px;
-    color: #555;
+  display: block;
+  margin-bottom: 8px;
+  color: #555;
 }
 
 /* Flex container for patient name and date in the same row */
 .flex-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 input,
 select,
 textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 /* Rx textarea with increased size */
 #rx {
-    width: 100%;
-    padding: 16px;
-    resize: vertical;
+  width: 100%;
+  padding: 16px;
+  resize: vertical;
+  white-space: pre-line;
 }
 
 /* Style for submit button */
 input[type="submit"] {
-    background-color: #4caf50;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
 }
 
-input[type="submit"]:hover {
-    background-color: #45a049;
+input[type="submit"]:hover {order: 2px solid #ccc
+  background-color: #45a049;
+}
+
+/* $$preview */
+#preview {
+  display: flex;
+  flex-direction: column;
+  max-width: 560px;
+  height: 100vh;
+  padding: 1rem;
+  background-color: #fff;
+  border: 2px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#header {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  text-align: left;
+  margin-top: 1rem;
+}
+
+#header h3 {
+  margin: 0;
+}
+
+.detail {
+  font-size: 80%;
+  /* text-align: left; */
+}
+
+#info {
+  margin-top: 20px;
+}
+
+#rx {
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+#sig {
+  text-align: right;
+  margin-top: 20px;
+  /* width: 60%; */
+  /* right: 5%; */
+}
+
+.signature {
+    width: 150px;
+    position: relative;
+    top: 20px;
+}
+
+/* $$custom */
+.detail {
+  font-size: smaller;
+}
+
+.dateLine {
+  text-align: right;
+}
+
+.info {
+  justify-content: left;
+}
+
+.line1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.entry {
+  margin-left: 0.5rem;
+  font-weight: bold;
+  /* padding-left: 1rem; */
+  border-bottom: 1px solid black;
+  /* width: 100%; */
+}
+
+#rxContent {
+  height: 70%;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  font-weight: bold;
+    margin-left: 2rem;
+}
+
+.rx {
+    margin-top: 1rem;
+  width: 100%;
+  height: 50%;
+  /* border: 1px solid gray; */
+  /* padding: 1rem; */
+  /* border-radius: 10px; */
+  white-space: pre-line;
+  border-top: 2px solid black;
+}
+
+/* $$fullscreen */
+/* #fullscreenBtn {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+} */
+
+/* $$logo */
+#buttonsContainer {
+  display: none;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+}
+
+#buttonsContainer button {
+  margin-right: 10px;
+}
+
+#toggleImage {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+
+@media (min-width: 720px) {
+ #preview {
+    width: 480px;
+ }   
 }
